pre testing, has continued build issues with gradle dependencies